// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[OebbAPI].getLocations getLocations() returns array with name "Wien" 1`] = `
Array [
  Object {
    "geo": Object {
      "id": "1190100",
      "latitude": 48.208547,
      "longitude": 16.372134,
      "type": "location",
    },
    "id": "1190100",
    "name": "Wien",
    "products": Object {
      "bus": true,
      "ferry": false,
      "interregional": true,
      "national": true,
      "nationalExpress": true,
      "onCall": true,
      "regional": true,
      "suburban": true,
      "subway": false,
      "tram": true,
    },
    "type": "stop",
  },
  Object {
    "geo": Object {
      "id": "1290401",
      "latitude": 48.185507,
      "longitude": 16.375326,
      "type": "location",
    },
    "id": "1290401",
    "name": "Wien Hbf (U)",
    "products": Object {
      "bus": true,
      "ferry": false,
      "interregional": true,
      "national": true,
      "nationalExpress": true,
      "onCall": false,
      "regional": true,
      "suburban": true,
      "subway": true,
      "tram": true,
    },
    "type": "stop",
  },
  Object {
    "geo": Object {
      "id": "1191201",
      "latitude": 48.174559,
      "longitude": 16.333211,
      "type": "location",
    },
    "id": "1191201",
    "name": "Wien Meidling",
    "products": Object {
      "bus": true,
      "ferry": false,
      "interregional": true,
      "national": true,
      "nationalExpress": true,
      "onCall": false,
      "regional": true,
      "suburban": true,
      "subway": true,
      "tram": true,
    },
    "type": "stop",
  },
  Object {
    "geo": Object {
      "id": "1291201",
      "latitude": 48.174433,
      "longitude": 16.331926,
      "type": "location",
    },
    "id": "1291201",
    "name": "Wien Meidling Bahnhof (U)",
    "products": Object {
      "bus": true,
      "ferry": false,
      "interregional": true,
      "national": true,
      "nationalExpress": true,
      "onCall": false,
      "regional": true,
      "suburban": true,
      "subway": true,
      "tram": true,
    },
    "type": "stop",
  },
  Object {
    "geo": Object {
      "id": "1490191",
      "latitude": 48.208709,
      "longitude": 16.372305,
      "type": "location",
    },
    "id": "1490191",
    "name": "Wien Zentrum",
    "products": Object {
      "bus": true,
      "ferry": false,
      "interregional": true,
      "national": false,
      "nationalExpress": false,
      "onCall": false,
      "regional": true,
      "suburban": true,
      "subway": true,
      "tram": false,
    },
    "type": "stop",
  },
]
`;

exports[`[OebbAPI].getStopInfo getStopInfo() returns object for id 1`] = `
Object {
  "geo": Object {
    "id": "8101590",
    "latitude": 48.18602,
    "longitude": 16.375137,
    "type": "location",
  },
  "id": "8101590",
  "name": "Wien Hbf (Bahnsteige 1-2)",
  "products": Object {
    "bus": false,
    "ferry": false,
    "interregional": true,
    "national": false,
    "nationalExpress": false,
    "onCall": false,
    "regional": true,
    "suburban": true,
    "subway": false,
    "tram": false,
  },
  "type": "stop",
}
`;

exports[`[OebbAPI].legReducer legReducer() returns a "reduced" leg 1`] = `
Object {
  "arrival": "test",
  "arrivalPlatform": "test",
  "departure": "test",
  "departurePlatform": "test",
  "destination": Object {
    "geo": "test",
    "id": "test",
    "name": "test",
    "products": "test",
    "type": "test",
  },
  "direction": "test",
  "distance": 10,
  "line": Object {
    "fahrtNr": "test",
    "id": "test",
    "mode": "test",
    "name": "test",
    "operator": Object {
      "id": "test",
      "name": "test",
      "type": "test",
    },
    "product": "test",
    "public": "test",
    "type": "test",
  },
  "origin": Object {
    "geo": "test",
    "id": "test",
    "name": "test",
    "products": "test",
    "type": "test",
  },
  "reachable": "test",
  "tripId": "test",
  "walking": true,
}
`;
